# FiiPython

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
FiiPython/: CaculateState.py  CalculateState.py  DrawDrone.py  ReadFii.py  VideoSaver.py  __init__.py  utils.py
examples/太空电梯/: show.py  太空电梯.fii
examples/太空电梯/final_dict_list/: final_dict_drone1.json  final_dict_drone2.json  final_dict_drone3.json  final_dict_drone4.json  final_dict_drone5.json  final_dict_drone6.json  final_dict_drone7.json
examples/太空电梯/动作组/: checksums.xml
examples/太空电梯/动作组/动作组1/: offlineExcuteScript.py  webCodeAll.py  webCodeAll.xml
examples/太空电梯/动作组/动作组1/transfile/: 95101.ls
examples/太空电梯/动作组/动作组2/: offlineExcuteScript.py  webCodeAll.py  webCodeAll.xml
examples/太空电梯/动作组/动作组2/transfile/: 95102.ls
examples/太空电梯/动作组/动作组3/: offlineExcuteScript.py  webCodeAll.py  webCodeAll.xml
examples/太空电梯/动作组/动作组3/transfile/: 95110.ls
examples/太空电梯/动作组/动作组4/: offlineExcuteScript.py  webCodeAll.py  webCodeAll.xml
examples/太空电梯/动作组/动作组4/transfile/: 95104.ls
examples/太空电梯/动作组/动作组5/: offlineExcuteScript.py  webCodeAll.py  webCodeAll.xml
examples/太空电梯/动作组/动作组5/transfile/: 95105.ls
examples/太空电梯/动作组/动作组6/: offlineExcuteScript.py  webCodeAll.py  webCodeAll.xml
examples/太空电梯/动作组/动作组6/transfile/: 95106.ls
examples/太空电梯/动作组/动作组7/: offlineExcuteScript.py  webCodeAll.py  webCodeAll.xml
examples/太空电梯/动作组/动作组7/transfile/: 95107.ls
examples/我乘着风飞过来/: 我乘着风飞过来.fii
examples/我乘着风飞过来/动作组/: checksums.xml
examples/我乘着风飞过来/动作组/动作组1/: offlineExcuteScript.py  webCodeAll.py  webCodeAll.xml
examples/我乘着风飞过来/动作组/动作组1/transfile/: 95101.ls
examples/我乘着风飞过来/动作组/动作组2/: offlineExcuteScript.py  webCodeAll.py  webCodeAll.xml
examples/我乘着风飞过来/动作组/动作组2/transfile/: 95102.ls
examples/我乘着风飞过来/动作组/动作组3/: offlineExcuteScript.py  webCodeAll.py  webCodeAll.xml
examples/我乘着风飞过来/动作组/动作组3/transfile/: 95110.ls
examples/我乘着风飞过来/动作组/动作组4/: offlineExcuteScript.py  webCodeAll.py  webCodeAll.xml
examples/我乘着风飞过来/动作组/动作组4/transfile/: 95104.ls
examples/我乘着风飞过来/动作组/动作组5/: offlineExcuteScript.py  webCodeAll.py  webCodeAll.xml
examples/我乘着风飞过来/动作组/动作组5/transfile/: 95105.ls
examples/我乘着风飞过来/动作组/动作组6/: offlineExcuteScript.py  webCodeAll.py  webCodeAll.xml
examples/我乘着风飞过来/动作组/动作组6/transfile/: 95106.ls
examples/我乘着风飞过来/动作组/动作组7/: offlineExcuteScript.py  webCodeAll.py  webCodeAll.xml
examples/我乘着风飞过来/动作组/动作组7/transfile/: 95107.ls
examples/我乘着风飞过来/动作组/动作组8/: offlineExcuteScript.py  webCodeAll.py  webCodeAll.xml
examples/我乘着风飞过来/动作组/动作组8/transfile/: 95108.ls
examples/我乘着风飞过来/动作组/动作组9/: offlineExcuteScript.py  webCodeAll.py  webCodeAll.xml
examples/我乘着风飞过来/动作组/动作组9/transfile/: 95109.ls
scripts/: run_simulation.py  show.py
