[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "FiiPython"
version = "1.0.0"
description = "FII无人机仿真系统"
readme = "README.md"
authors = [
    {name = "FII Team", email = "your.email@example.com"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "opencv-python>=4.8.0.74",
    "numpy>=1.24.0",
    "xmltodict>=0.13.0",
]

[project.optional-dependencies]
audio = ["ffmpeg-python>=0.2.0"]
dev = ["pytest>=7.0.0", "pylint>=2.17.0", "black>=23.0.0"]

[project.urls]
Homepage = "https://github.com/Xing-yuyu/FiiPython"
"Bug Reports" = "https://github.com/Xing-yuyu/FiiPython/issues"

[project.scripts]
fiipython-simulate = "scripts.run_simulation:main"
fiipython-show = "scripts.show:main"