[metadata]
name = FiiPython
version = 1.0.0
author = FII Team
author_email = your.email@example.com
description = FII无人机仿真系统
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/FiiPython
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Visualization
    Topic :: Multimedia :: Video
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >=3.8
install_requires =
    opencv-python>=4.8.0.74
    numpy>=1.24.0
    xmltodict>=0.13.0

[options.extras_require]
dev =
    pytest>=7.0.0
    pylint>=2.17.0
    black>=23.0.0
audio =
    ffmpeg-python>=0.2.0

[options.entry_points]
console_scripts =
    fiipython-simulate = scripts.run_simulation:main
    fiipython-show = scripts.show:main

[flake8]
max-line-length = 120
extend-ignore = E203, W503
exclude = .git,__pycache__,build,dist

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
ignore_missing_imports = True